kubernetes/apps/multimedia/prowlarr/app/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: prowlarr-buffer
  namespace: multimedia
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: prowlarr
  connection:
    bufferLimit: "64Ki"
