kubernetes/apps/multimedia/prowlarr/app/security-policy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prowlarr-oidc
spec:
  targetRefs:
    - kind: HTTPRoute
      group: gateway.networking.k8s.io
      name: prowlarr
  oidc:
    provider:
      issuer: "https://auth.${DOMAIN}/realms/home"
    clientID: "servarr"
    clientSecret:
      name: servarr-oidc-secret
    redirectURL: "https://prowlarr.${DOMAIN}/oauth2/callback"
    logoutPath: "/oauth2/sign_out"
    scopes:
      - openid
